--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
 .master {
     height: 600px;
     width: 400px;
-    background-color: lightgray;
+    background-color: black;
     margin: auto auto;
     display: flex;
     flex-direction: column;
@@ -18,7 +18,7 @@ body {
 }
 
 .second {
-    background-color: lightgray;
+    background-color: black;
     flex: 1 1 auto;
     display: flex;
     gap: 8px;
@@ -35,7 +35,7 @@ body {
     justify-content: center;
     font-size: 24px;
     font-weight: bold;
-    color: white;
+    color: black;
     padding: 0px;
 }
 
@@ -43,6 +43,7 @@ body {
     background-color: lightblue;
     flex: 1 1 auto;
     width: 25px;
+    height: 90px;
     align-items: end;
     padding: 0px 16px;
     display: flex;
@@ -50,13 +51,13 @@ body {
     justify-content: center;
     font-size: 24px;
     font-weight: bold;
-    color: white;
+    color: black;
 }
 
-#zero {
+.second >.zero {
     flex: 2 1 auto;
-    width: 50px;
-    padding: 0px 4px;
+    width: 58px;
+    border: 2px 4px;
 }
 
 .second > .number {
